// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PersonCard renders a skill when the search terms match a skill 1`] = `
<div
  data-stylename="person-card"
  onClick={[Function]}
>
  <RoundImage
    data-stylename="person-image"
    large={true}
    url="me.png"
  />
  <div
    data-stylename="person-details"
  >
    <Highlight
      component="span"
      highlightClassName="highlight"
      terms={
        Array [
          "walking",
        ]
      }
    >
      <div
        data-stylename="person-name"
      >
        Joe Person
      </div>
    </Highlight>
    <div
      data-stylename="person-location"
    >
      home
    </div>
  </div>
  <Pill
    data-stylename="person-skill"
    label="walking"
    small={true}
  />
</div>
`;

exports[`PersonCard renders correctly 1`] = `
<div
  data-stylename="person-card"
  onClick={[Function]}
>
  <RoundImage
    data-stylename="person-image"
    large={true}
    url="me.png"
  />
  <div
    data-stylename="person-details"
  >
    <Highlight
      component="span"
      highlightClassName="highlight"
      terms={
        Array [
          "cat",
        ]
      }
    >
      <div
        data-stylename="person-name"
      >
        Joe Person
      </div>
    </Highlight>
    <div
      data-stylename="person-location"
    >
      home
    </div>
  </div>
</div>
`;

exports[`Search matches the latest snapshot 1`] = `
<withRouter(Connect(FullPageModal))
  leftSideBarHidden={true}
>
  <div
    data-stylename="search"
  >
    <SearchBar
      filter="person"
      searchForInput="cat"
      setSearchFilter={[Function]}
      setSearchTerm={[Function]}
      updateQueryParam={[Function]}
    />
    <div
      data-stylename="search-results"
      id="search-results"
    >
      <SearchResult
        key="1"
        searchResult={
          Object {
            "id": "1",
          }
        }
        showPerson={[Function]}
        term="cat"
      />
      <Loading
        type="bottom"
      />
      <ScrollListener
        elementId="search-results"
        onBottom={[Function]}
      />
    </div>
  </div>
</withRouter(Connect(FullPageModal))>
`;
